Bug 148784 - Stretch point is missing in export to custGeom in OOXML
Summary: Stretch point is missing in export to custGeom in OOXML
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: Shape-ODF-OOXML-export
  Show dependency treegraph
 
Reported: 2022-04-25 23:22 UTC by Regina Henschel
Modified: 2023-01-22 06:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
example with ActionButton (13.46 KB, application/vnd.oasis.opendocument.presentation)
2022-04-25 23:22 UTC, Regina Henschel
Details
Set of further files for manual testing (161.94 KB, application/x-zip-compressed)
2022-04-26 21:56 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-04-25 23:22:30 UTC
Created attachment 179769 [details]
example with ActionButton

Open attached document. It has a not square action button. The markup uses the attributes draw:path-stretchpoint-x and draw:path-stretchpoint-y. The purpose of these attributes is, that the width of the bevel area does not change, when you make the shape much wider. The width of the bevel area is only determined by the handle.

Save the document to pptx-format. Open in PowerPoint or reopen in LO. Notice, that the geometry is broken.
Comment 1 Regina Henschel 2022-04-25 23:27:04 UTC
I will fix it.

The solution is to use parameter value "true" in calling EnhancedCustomShape2d::GetParameter().
Comment 2 Regina Henschel 2022-04-26 21:56:22 UTC
Created attachment 179796 [details]
Set of further files for manual testing

Not all cases of commands are covered by unit tests. Here are some more files, which can be used for manual testing.
Comment 3 Regina Henschel 2022-04-26 22:19:46 UTC
For patch see https://gerrit.libreoffice.org/c/core/+/133463
Comment 4 Commit Notification 2022-04-27 12:13:28 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0818a3dcaf6d7962d043829d42a3bb9d998393d4

tdf#148784 consider StretchX in OOXML export

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.